修改多语言问题

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4783,6 +4783,7 @@
       }
     },
     "选择目标语言" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
