--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -27,16 +27,46 @@
             "state" : "translated",
             "value" : "API设置"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "API設置"
+          }
         }
       }
     },
     "Conversion successful!" : {
-      "extractionState" : "manual",
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Conversion successful!"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "変換成功！"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "변환 성공!"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "转换成功！"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "轉換成功！"
           }
         }
       }
@@ -70,6 +100,12 @@
             "state" : "translated",
             "value" : "取消全选"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "取消全選"
+          }
         }
       }
     },
@@ -88,19 +124,25 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "メッセージを入力"
+            "value" : "入力メッセージ"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "메시지 입력"
+            "value" : "입력 메시지"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "输入消息"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "輸入訊息"
           }
         }
       }
@@ -131,6 +173,12 @@
             "state" : "translated",
             "value" : "界面语言"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "界面語言"
+          }
         }
       }
     },
@@ -159,6 +207,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "语言设置"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "語言設置"
           }
         }
       }
@@ -192,6 +246,12 @@
             "state" : "translated",
             "value" : "更多设置开发中..."
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "更多設置正在開發中..."
+          }
         }
       }
     },
@@ -220,6 +280,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "未选择文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "未選擇文件"
           }
         }
       }
@@ -250,6 +316,12 @@
             "state" : "translated",
             "value" : "未选择保存位置"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "未選擇保存位置"
+          }
         }
       }
     },
@@ -278,6 +350,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "其他设置"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "其他設置"
           }
         }
       }
@@ -308,6 +386,12 @@
             "state" : "translated",
             "value" : "平台"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "平台"
+          }
         }
       }
     },
@@ -329,13 +413,19 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : ".arb 파일을 선택하세요"
+            "value" : ".arb 파일을 선택해 주세요"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "请选择.arb文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "請選擇.arb文件"
           }
         }
       }
@@ -358,13 +448,19 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : ".json 파일을 선택하세요"
+            "value" : ".json 파일을 선택해 주세요"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "请选择.json文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "請選擇.json文件"
           }
         }
       }
@@ -387,13 +483,19 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : ".strings 또는 .xcstrings 파일을 선택하세요"
+            "value" : ".strings 또는 .xcstrings 파일을 선택해 주세요"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "请选择.strings或.xcstrings文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "請選擇.strings或.xcstrings文件"
           }
         }
       }
@@ -410,7 +512,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "お待ちください、しばらく時間がかかる場合があります"
+            "value" : "しばらくお待ちください、時間がかかる場合があります"
           }
         },
         "ko" : {
@@ -423,6 +525,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "请稍候，这可能需要一些时间"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "請稍候，這可能需要一些時間"
           }
         }
       }
@@ -453,6 +561,12 @@
             "state" : "translated",
             "value" : "重置"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "重置"
+          }
         }
       }
     },
@@ -468,16 +582,22 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ローカライゼーションファイルを保存"
+            "value" : "ローカライズファイルを保存"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "로컬라이제이션 파일 저장"
+            "value" : "지역화 파일 저장"
           }
         },
         "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "保存本地化文件"
+          }
+        },
+        "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "保存本地化文件"
@@ -511,6 +631,12 @@
             "state" : "translated",
             "value" : "保存路径："
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "保存路徑："
+          }
         }
       }
     },
@@ -539,6 +665,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "选择"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇"
           }
         }
       }
@@ -569,6 +701,12 @@
             "state" : "translated",
             "value" : "全选"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "全選"
+          }
         }
       }
     },
@@ -597,6 +735,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "选择ARB文件目录"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇ARB文件的目錄"
           }
         }
       }
@@ -627,6 +771,12 @@
             "state" : "translated",
             "value" : "选择JSON文件目录"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇JSON文件的目錄"
+          }
         }
       }
     },
@@ -655,6 +805,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "选择语言文件目录"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇語言文件的目錄"
           }
         }
       }
@@ -685,6 +841,12 @@
             "state" : "translated",
             "value" : "选择输入文件"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇輸入文件"
+          }
         }
       }
     },
@@ -700,19 +862,25 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ローカライゼーションファイルを選択"
+            "value" : "ローカライズファイルを選択"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "로컬라이제이션 파일 선택"
+            "value" : "지역화 파일 선택"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "选择本地化文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇本地化文件"
           }
         }
       }
@@ -743,6 +911,12 @@
             "state" : "translated",
             "value" : "选择保存.xcstrings文件的位置"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇保存.xcstrings文件的位置"
+          }
         }
       }
     },
@@ -771,6 +945,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "选择输出位置"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇輸出位置"
           }
         }
       }
@@ -801,6 +981,12 @@
             "state" : "translated",
             "value" : "选择平台"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇平台"
+          }
         }
       }
     },
@@ -829,6 +1015,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "选择保存目录"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇保存目錄"
           }
         }
       }
@@ -859,6 +1051,12 @@
             "state" : "translated",
             "value" : "选择目标语言"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "選擇目標語言"
+          }
         }
       }
     },
@@ -888,6 +1086,12 @@
             "state" : "translated",
             "value" : "发送"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "發送"
+          }
         }
       }
     },
@@ -909,13 +1113,19 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "파인더에서 보기"
+            "value" : "Finder에서 보기"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "在Finder中显示"
+            "value" : "在访达中显示"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "在Finder中顯示"
           }
         }
       }
@@ -946,38 +1156,116 @@
             "state" : "translated",
             "value" : "开始转换"
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "開始轉換"
+          }
         }
       }
     },
     "Successfully generated ARB files for all languages" : {
-      "extractionState" : "manual",
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Successfully generated ARB files for all languages"
           }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "すべての言語のARBファイルを正常に生成しました"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "모든 언어에 대한 ARB 파일 생성 성공"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "成功生成所有语言的ARB文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "成功生成所有語言的ARB文件"
+          }
         }
       }
     },
     "Successfully generated localized files for all languages" : {
-      "extractionState" : "manual",
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Successfully generated localized files for all languages"
           }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "すべての言語のローカライズファイルを正常に生成しました"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "모든 언어에 대한 지역화 파일 생성 성공"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "成功生成所有语言的本地化文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "成功生成所有語言的本地化文件"
+          }
         }
       }
     },
     "Successfully generated localized JSON file containing %@ translation items" : {
-      "extractionState" : "manual",
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Successfully generated localized JSON file containing %@ translation items"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@の翻訳項目を含むローカライズされたJSONファイルを正常に生成しました"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@개의 번역 항목을 포함한 지역화 JSON 파일 생성 성공"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "成功生成包含%@个翻译项的本地化JSON文件"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "成功生成包含%@翻譯項目的本地化JSON文件"
           }
         }
       }
@@ -1008,6 +1296,12 @@
             "state" : "translated",
             "value" : "翻译中..."
           }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "翻譯中..."
+          }
         }
       }
     },
@@ -1036,6 +1330,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "翻译服务"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "翻譯服務"
           }
         }
       }
