--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -1404,6 +1404,9 @@
         }
       }
     },
+    "Test Gemini API" : {
+
+    },
     "Traditional Chinese" : {
       "extractionState" : "stale",
       "localizations" : {
